# pholex

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  ultraplan.md
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  deps.py  keyword_presets.py  lots.py  special_hold.py  watchlist.py  wire.py  ws.py
backend/app/core/: auth.py  session.py  websocket_manager.py
backend/app/db/: database.py  redis.py
backend/app/di/: container.py
backend/app/domain/: hold.py  identity.py  keyword.py  lot.py  session.py
backend/app/models/: __init__.py  lot.py  user.py
backend/app/ports/: clock.py  dto.py  keyword_preset_repository.py  lot_repository.py  lot_source.py  lot_watchlist_repository.py  mail_sender.py  sso_verifier.py  unit_of_work.py  user_repository.py
backend/app/schemas/: auth.py  lot.py
backend/app/services/: cache_service.py  lot_service.py
backend/app/usecases/: delete_keyword_preset.py  fetch_my_holds.py  get_watchlist.py  list_keyword_presets.py  save_keyword_preset.py  save_watchlist.py  search_special_hold.py  sso.py  stream_hold_changes.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_endpoints.py  test_keyword_presets.py  test_special_hold.py  test_watchlist.py  test_ws_wire_format.py
backend/tests/contract/: conftest.py  test_dto_validation.py  test_keyword_preset_repository_contract.py  (+6 more)
(+176 files in other folders)
